# challenge-solutions

./: .gitignore  .gitmodules  README.md  minimum-window-substring.cpp  reverse-string-2.cpp  rotate-array.cpp
advent-of-code/2020/: README.txt
advent-of-code/2022/: README.md
computer-enhance/z8086/: build.zig
computer-enhance/z8086disasm/: build.zig
easy/: best-time-to-buy-and-sell-stock.cpp  maximum-subarray.cpp  range-sum-query-immutable.cpp  remove-duplicates-from-sorted-array.cpp
exercism/: .gitignore
hackerrank/easy/: 2d-array.py  a-very-big-sum.py  birthday-cake-candles.py  circular-array-rotation.py  compare-the-triplets.py  correctness-invariant.py  counting-valleys.java  ctci-array-left-rotation.py  ctci-bubble-sort.py  ctci-linked-list-cycle.cpp  ctci-making-anagrams.py  ctci-ransom-note.py  diagonal-difference.py  find-substring.cpp  find-substring.java  find-substring.py  grading.py  insertionsort1.py  insertionsort2.py  ip-address-validation.py  jumping-on-the-clouds.py  mark-and-toys.py  mini-max-sum.py  plus-minus.py  repeated-string.py  runningtime.py  simple-array-sum.py  sock-merchant.java  sock-merchant.py  stack-exchange-scraper.py  staircase.py  time-conversion.py  two-strings.py
hackerrank/hard/: crush.py  ctci-contracts.java  ctci-contracts.py
hackerrank/medium/: candies.py  count-triplets-1.py  minimum-swaps-2.py  (+7 more)
hard/: word-search-ii.cpp
leetcode/: .exrc  .lvimrc
medium/: coin-change.cpp  fraction-to-recurring-decimal.cpp  merge-intervals.cpp  number-of-islands.cpp
protohackers/3/: Cargo.toml
protohackers/3/src/: main.rs
(+811 files in other folders)
