[package]
name = "proto3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tinyvec = { version = "1.6.0", features = ["rustc_1_55"] }

[dependencies.tokio]
version = "1.38.2"
features = ["io-util", "macros", "net", "rt", "sync"]
